src/objects/Booking_Type__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Booking Types</relationshipLabel>
        <relationshipName>Booking_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stop_Sell_Reason__c</fullName>
        <label>Stop Sell Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Structure_Type__c</fullName>
        <label>Structure Type</label>
        <picklist>
            <picklistValues>
                <fullName>All-inclusive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apart - Hotel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartment/Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apartments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed &amp; Breakfasts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cabin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chalet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Condo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Farm Homes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guest Houses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hostels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hotels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Classified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pensions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Town House Suites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EOV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UNPUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Booking Type</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Booking Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Booking Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>